[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "logpy"
version = "1.3.2"
authors = ["Muhammed Abdullah Shaikh <muhammed.shaikh@accoladeelectronics.com>"]
description = "Your Log Analysis Tool"
license = "GNU General Public License v2.0"
readme = "README.md"
keywords = ["log", "analysis","python"]

[tool.poetry.dependencies]
python = "^3.6"
tabulate = "^0.8"
easydict = "^1.9"
argparse = "^1.1"
tqdm = "^4.62"

[tool.poetry.scripts]
logpy = "logpy.main:main"
logpy-gui = "logpy.gui:gui"
logpy-gui-devel = "logpy.gui_devel.gui"