[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "logpy"
version = "1.3.3"
authors = ["Muhammed Abdullah Shaikh <muhammed.shaikh@accoladeelectronics.com>"]
description = "Your Log Analysis Tool"
license = "GNU General Public License v2.0"
readme = "README.md"
keywords = ["log", "analysis","python"]

[tool.poetry.dependencies]
python = "^3.6"
tabulate = "^0.8"
easydict = "^1.9"
argparse = "^1.1"
tqdm = "^4.62"
PySide6 = "^6.5.2"
pyqtdarktheme = "^2.1.0"
Markdown = "^3.4.4"

[tool.poetry.scripts]
logpy = "logpy.main:main"
logpy-gui = "logpy.gui:gui"
logpy-gui2 = "logpy.gui_devel:gui"